# runeguard

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  action.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  example-ci-protected.yml  publish.yml  test-action.yml
.runeguard/: audit.jsonl
docs/: architecture.md  eng-review-fixes-spec.md  github-action-spec.md  github-action.md  mcp.md  policy-schema.md  problem.md  research-runeguard-vs-prompt-guardrails.md  roadmap.md  seccomp.md  security-boundary.md  tamper-evident-audit-spec.md  threat-model.md
ebpf/: README.md
ebpf/include/: events.h
ebpf/src/: runeguard.bpf.c  runeguard_loader.c
examples/agentic_github_action/.github/workflows/: ai-review.yml
examples/ci-cache-poisoning/: README.md  attack.py  runeguard-ci.yaml
examples/demo_repo/: README.md
examples/diff_risk/: sample.diff
examples/fake_agent/: agent.py  poisoned_prompt.txt  tools.py
examples/mcp_config/: mcp.json
examples/startup_repo/: .env.example  package.json
policies/: default.yaml
runeguard/: __init__.py  agent.py  approval.py  audit.py  audit_compliance.py  ci.py  cli.py  correlation.py  daemon.py  decision.py  default_policy.yaml  demo.py  diff_risk.py  integrity.py  logger.py  logging.py  opa.py  policy.py  proxy.py  redaction.py  scan.py  startup.py
runeguard/agents/: __init__.py  base.py  langchain.py  openai_codex.py  openai_tools.py
runeguard/core/: __init__.py  docker.py  interceptor.py  landlock.py  sandbox.py
runeguard/ebpf/: Makefile  __init__.py  loader.py
runeguard/ebpf/include/: events.h
runeguard/ebpf/probes/: syscalls.bpf.c
runeguard/ebpf/src/: runeguard.bpf.c  runeguard_loader.c
runeguard/mcp/: __init__.py  inspect.py  proxy.py  server.py
runeguard/profiles/: ci.yaml
runeguard/seccomp/: __init__.py  filter.py  runner.py
runeguard/shim/: Makefile  preload.c
scripts/: action-entrypoint.sh  demo.sh  install_ebpf_deps.sh
tests/: fake_mcp_server.py  test_action_entrypoint.py  test_agent_ci_diff_mcp.py  test_audit.py  test_ci_profile.py  test_cli.py  test_correlation.py  test_daemon.py  test_decision.py  test_docker_integration.py  test_docker_sandbox.py  test_ebpf.py  test_examples.py  test_integrity.py  test_landlock.py  test_mcp.py  test_mcp_proxy.py  test_opa.py  test_openai_codex.py  test_policy.py  test_preload_backend.py  test_profiles.py  test_proxy.py  test_redaction_reports.py  test_report.py  test_seccomp.py  test_startup_scan.py
tests/breakage/: test_sandbox_breakage.py
