[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "runeguard"
version = "0.1.0"
description = "Runtime enforcement layer for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0"
]

[project.scripts]
runeguard = "runeguard.cli:app"

[tool.setuptools.packages.find]
include = ["runeguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
