[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "runeguard"
version = "1.0.0"
description = "Runtime enforcement layer for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0"
]

[project.scripts]
runeguard = "runeguard.cli:app"
runeguard-daemon = "runeguard.daemon:main"
runeguard-ebpf = "runeguard.ebpf.loader:main"
runeguard-mcp = "runeguard.mcp.server:main"

[tool.setuptools.packages.find]
include = ["runeguard*"]

[tool.setuptools.package-data]
runeguard = [
    "shim/preload.c",
    "shim/Makefile",
    "ebpf/probes/*.c",
    "seccomp/*.py",
    "mcp/*.py"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
