[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "runeguard"
version = "0.1.0"
description = "Runtime enforcement layer for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "build>=1.2.0"
]

[project.urls]
Homepage = "https://github.com/nzhumasseiit/runeguard"
Repository = "https://github.com/nzhumasseiit/runeguard"
Issues = "https://github.com/nzhumasseiit/runeguard/issues"
"GitHub Action" = "https://github.com/marketplace/actions/runeguard"

[project.scripts]
runeguard = "runeguard.cli:app"
runeguard-daemon = "runeguard.daemon:main"
runeguard-ebpf = "runeguard.ebpf.loader:main"
runeguard-mcp = "runeguard.mcp.server:main"

[tool.setuptools.packages.find]
include = ["runeguard*"]

[tool.setuptools.package-data]
runeguard = [
    "default_policy.yaml",
    "shim/preload.c",
    "shim/Makefile",
    "ebpf/Makefile",
    "ebpf/src/*.c",
    "ebpf/include/*.h",
    "ebpf/probes/*.c",
    "ebpf/runeguard-ebpf-loader",
    "ebpf/runeguard.bpf.o",
    "profiles/*.yaml",
    "seccomp/*.py",
    "mcp/*.py"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require external runtimes such as Docker"
]
